software/pcx86/sys/windows/1.03/index.md
---
layout: page
title: Microsoft Windows 1.03
permalink: /software/pcx86/sys/windows/1.03/
redirect_from: /disks/pcx86/windows/1.03/
---

Windows 1.03 was released in August 1986.

Directory listings of the six 360Kb distribution diskettes are provided below.

It's been noted on [WinWorld](https://winworldpc.com/product/windows-10/103) that version 1.03 disks have
been found with `USER.EXE` dated either `05-22-86` *or* `08-24-86`.  The latter is available here as
[Windows 1.03b](../1.03b/).

These PCjs disk images are from our private collection.  Differences include: 

  - `USER.EXE` below is dated `05-22-86` (in [Windows 1.03b](../1.03b/), it is dated `08-24-86`)
  - `MOUSE.DRV` below is dated `07-02-86` (in [Windows 1.03b](../1.03b/), it is dated `08-21-86`)
  - The PROGRAM disk below contains an assortment of DEMO applications ([Windows 1.03b](../1.03b/) does not) 

### Directory of Windows 1.03 (SETUP)

     Volume in drive A is SETUP
     Directory of A:\

    SETUP    LBL         8   8-11-86  11:59a
    SETUP    EXE     36676   6-30-86   5:57p
    KERNEL   EXE     34063   8-06-86   2:59p
    SYSTEM   DRV      2663   7-09-86   3:15p
    USA      DRV      4005   7-20-86   5:27p
    UK       DRV      4009   7-20-86   5:27p
    GERMANY  DRV      4758   7-20-86   5:27p
    FRANCE   DRV      4773   7-20-86   5:27p
    ITALY    DRV      4027   7-20-86   5:27p
    SPAIN    DRV      4630   7-20-86   5:27p
    SWEDEN   DRV      4649   7-20-86   5:28p
    NORWAY   DRV      4649   7-20-86   5:28p
    DENMARK  DRV      4649   7-20-86   5:28p
    ATTKBD   DRV      3903   5-22-86   4:21p
    NOMOUSE  DRV      1592   5-22-86  10:42a
    MOUSE    DRV      3358   7-02-86   3:13p
    MSMOUSE1 DRV      1966   5-22-86  10:45a
    MSMOUSE2 DRV      1966   5-22-86  10:45a
    LMOUSE   DRV      2661   5-02-86   5:47p
    LPC      DRV      2438   5-22-86  10:41a
    FTG      DRV      1961   5-22-86  10:48a
    JOYMOUSE DRV      2114   5-22-86  10:35a
    ATTMOUSE DRV      2305   5-22-86   2:30p
    CGA      DRV     13008   6-24-86   8:39p
    HERCULES DRV     15776   6-24-86   8:41p
    EGAMONO  DRV     13952   6-24-86   8:36p
    EGAHIBW  DRV     13952   6-24-86   8:35p
    EGALORES DRV     15648   6-24-86   8:46p
    EGAHIRES DRV     17536   6-24-86   8:47p
    ATTDC    DRV     15776   5-23-86   5:22p
    ATTDEB   DRV     17824   5-23-86   2:23p
    GENIUS   DRV     15216  12-19-85  10:25p
    SOUND    DRV      5853   5-22-86  11:49a
    COMM     DRV      4860   5-22-86   9:01a
    LASRHARD TXT       372   6-11-86  11:23a
    LASRSOFT TXT       372   6-11-86  11:22a
    LOFONTS  FON      5552   7-29-86   4:42p
    HIFONTS  FON      7472   7-29-86   4:42p
    FONTS400 FON      7952   7-29-86   4:42p
    RAMDRIVE SYS      6680   8-01-86   5:59a
    EMM      PC      12898   7-30-85   5:15p
    EMM      AT      12874   7-30-85   5:33p
    WRITE    DAT        47   8-11-86  12:02p
           43 file(s)     341443 bytes
                            1024 bytes free

### Directory of Windows 1.03 (BUILD)

     Volume in drive A is BUILD
     Directory of A:\

    BUILD    LBL         8   8-11-86  12:02p
    GDI      EXE     92638   7-11-86   3:23p
    USER     EXE    122416   5-22-86   3:49a
    MSDOSD   EXE      6242   6-23-86   2:32p
    MSDOS    EXE     43104   6-09-86   4:57p
    CGA      GRB      1403   7-16-86  11:07p
    EGALORES GRB      1266   7-16-86  11:07p
    EGAHIRES GRB        15   7-24-85   1:55p
    EGAHIBW  GRB        15   7-24-85   1:55p
    EGAMONO  GRB      1114   7-16-86  11:07p
    HERCULES GRB      1303   7-16-86  11:07p
    ATTDC    GRB      1307   2-22-86  10:34a
    ATTDEB   GRB        12   5-23-86   1:11p
    GENIUS   GRB         9   7-29-86   3:55p
    WIN      CNF      1936  11-12-85   4:13p
    EGALORES LGO         9   6-27-85  12:29p
    EGAHIRES LGO         9   6-27-85  12:29p
    EGAHIBW  LGO         9   6-27-85  12:29p
    GENIUS   LGO         9   6-27-85  12:29p
    EGAMONO  LGO      2936   8-11-86  11:41a
    HERCULES LGO      3060   8-11-86  11:41a
    CGA      LGO      2937   8-11-86  11:41a
    ATTDC    LGO      2916   5-28-86  11:30a
    ATTDEB   LGO      3095   5-28-86  11:31a
    WIN      INI      2093   5-22-86   1:50p
    WINOLDAP MOD     19824   8-01-86   3:16a
    SPOOLER  EXE     13264   6-30-86   6:09p
           27 file(s)     322949 bytes
                           20480 bytes free

### Directory of Windows 1.03 (UTILITY)

     Volume in drive A is UTILITY
     Directory of A:\

    UTILITY  LBL        11   8-14-86   8:41p
    README   DOC       148   7-21-86   2:22p
    EPSON    DRV     14352   5-22-86  11:07a
    NEC3550  DRV     22512   5-22-86  10:23a
    HPLASER  DRV     21504   8-06-86  12:52p
    HPLASERP DRV     22864   8-06-86   1:06p
    HP7470A  DRV     16336   7-29-86   2:20p
    HP7475A  DRV     18960   7-29-86   2:14p
    HP7550A  DRV     20384   7-29-86   1:50p
    IBMGRX   DRV     12288   5-22-86  12:28p
    OKI92    DRV     12416   5-22-86  12:59p
    CITOH    DRV     12016   5-22-86  10:58a
    TI850    DRV     11584   5-22-86   1:09p
    LQ1500   DRV     14544   5-22-86  12:39p
    TOSH     DRV     12432   5-22-86  11:27a
    NECP2    DRV     12304   5-22-86  12:49p
    SG10     DRV     14848   5-22-86  11:17a
    EPSONMX  DRV     12176   5-22-86  12:18p
    TTY      DRV      4800   7-10-86   1:52p
    PSCRIPT  DRV     56224   8-13-86  10:26a
    THINKJET DRV     12128   7-10-86  12:00p
    XER4020  DRV     21024   8-14-86   8:05p
           22 file(s)     345855 bytes
                            6144 bytes free

### Directory of Windows 1.03 (FONT)

     Volume in drive A is FONT
     Directory of A:\

    FONT     LBL         7   8-11-86  12:08p
    COURA    FON      8720   7-29-86   4:43p
    COURB    FON     12304   7-29-86   4:43p
    COURC    FON      8784   7-29-86   4:43p
    COURD    FON     15136   7-29-86   4:43p
    HELVA    FON     27056   7-29-86   4:44p
    HELVB    FON     37680   7-29-86   4:45p
    HELVC    FON     26624   7-29-86   4:45p
    HELVD    FON     45600   7-29-86   4:45p
    TMSRA    FON     26256   7-29-86   4:46p
    TMSRB    FON     36240   7-29-86   4:46p
    TMSRC    FON     25824   7-29-86   4:47p
    TMSRD    FON     45200   7-29-86   4:47p
    ROMAN    FON     11120   7-09-86   5:19p
    SCRIPT   FON     10304   7-09-86   5:18p
    MODERN   FON      7584   7-09-86   5:18p
           16 file(s)     344439 bytes
                            9216 bytes free

### Directory of Windows 1.03 (APPS)

     Volume in drive A is APPS
     Directory of A:\

    CALC     EXE     25008   5-22-86   4:33a
    CALENDAR EXE     37552   5-22-86   7:55a
    CARDFILE EXE     36992   5-22-86   4:23a
    CLIPBRD  EXE      9712   5-22-86   6:17a
    CLOCK    EXE      7984   5-22-86   6:08a
    CONTROL  EXE     52704   8-14-86   4:13p
    NOTEPAD  EXE     18736   5-22-86   6:28a
    PAINT    EXE     90176   7-10-86   6:28p
    REVERSI  EXE     14864   5-22-86   4:28a
    TERMINAL EXE     47344   6-12-86  11:22a
    ABC      TXT        42   6-04-85   9:07a
    DOTHIS   TXT       493  10-25-85   1:02p
           12 file(s)     341607 bytes
                           13312 bytes free

### Directory of Windows 1.03 (PROGRAM)

     Volume in drive A is WRITE
     Directory of A:\

    README   TXT     11196   8-01-86   2:21p
    WRITE    EXE    192176   7-22-86  11:36a
    PRACTICE WRI      2944   9-09-85   3:04p
    PIF          <DIR>       8-11-86  12:12p
    DEMO         <DIR>       9-08-86  10:11p
            5 file(s)     206316 bytes

     Directory of A:\PIF

    .            <DIR>       8-11-86  12:12p
    ..           <DIR>       8-11-86  12:12p
    PIFEDIT  EXE     28528   5-22-86   6:35a
    123      PIF       369  10-26-85  12:57p
    123-2    PIF       369  10-26-85  12:58p
    BASIC    PIF       369  10-14-85   6:02p
    BASICA   PIF       369  10-14-85   6:03p
    CHART    PIF       369   9-18-85  11:09a
    CLOUT    PIF       369   6-26-85   2:39p
    DBASE    PIF       369   9-18-85  11:16a
    DBASE2   PIF       369   9-18-85  11:16a
    DBASE3   PIF       369   9-18-85  11:17a
    DW2PG    PIF       369   9-18-85  11:18a
    DW3PG    PIF       369   9-18-85  11:19a
    FILE     PIF       369   9-18-85  11:28a
    FW       PIF       369   7-16-86  12:21p
    FWC      PIF       369   9-18-85  11:29a
    FWT      PIF       369   9-18-85  11:30a
    GRAPH    PIF       369   9-18-85  11:31a
    HTPM     PIF       369   1-03-80   4:23p
    IBMFILE  PIF       369   9-18-85  11:44a
    IBMGRAPH PIF       369   9-18-85  11:45a
    IBMREPRT PIF       369   1-03-80   3:12p
    IBMWRITE PIF       369   1-03-80   3:23p
    LOTUS    PIF       369  10-26-85  12:58p
    LOTUS2   PIF       369  10-26-85   1:17p
    MP       PIF       369   9-18-85  11:35a
    MSACCESS PIF       369  12-18-85   1:09p
    PE       PIF       369   5-01-86   4:45p
    PC-DRAW  PIF       369   9-24-85  10:39a
    PFSACCES PIF       369   1-03-80   3:36p
    PLAN     PIF       369   9-18-85  11:49a
    PROEDIT  PIF       369   9-18-85  11:50a
    PROJ     PIF       369   9-18-85  11:51a
    PROJM    PIF       369   9-18-85  11:52a
    QB       PIF       369   8-08-86  11:35a
    RB5000   PIF       369  11-07-85   5:16p
    RBASE    PIF       369   9-18-85  12:02p
    REPORT   PIF       369   9-18-85  12:03p
    RG       PIF       369   9-18-85  12:04p
    SC3      PIF       369   9-18-85  12:05p
    SCOM     PIF       369   9-18-85  12:06p
    SCOMII   PIF       369   9-18-85  12:06p
    SPELL    PIF       369   9-19-85  11:53a
    SYMPHACC PIF       369   8-27-85   6:37a
    SYMPHONY PIF       369   9-18-85  12:13p
    TURBO    PIF       369   9-18-85  12:13p
    VX       PIF       369   1-03-80   3:45p
    WORD     PIF       369  11-01-85   1:06p
    WORDEGA  PIF       369  11-01-85   1:08p
    WP       PIF       369   9-18-85  12:18p
    WRDPERF  PIF       369   8-06-85   4:48p
    WRITE    PIF       369   9-18-85  12:19p
    WS       PIF       369   9-18-85  12:20p
    WS2      PIF       369   8-08-86   5:29p
    XTALK    PIF       369   9-18-85  12:21p
    XYWRITE  PIF       369   1-03-80   1:31p
           57 file(s)      48454 bytes

     Directory of A:\DEMO

    .            <DIR>       9-08-86  10:11p
    ..           <DIR>       9-08-86  10:11p
    BIND     DOC      1821  11-12-85  11:21a
    BIND     EXE      6960  11-11-85   6:28p
    CUBE     EXE     13360  10-23-85   4:22p
    BOXES    EXE      3738  11-06-85   5:08p
    PUZZLE   EXE      9440  10-23-85   3:44p
    DISKLOOK EXE     17904  11-12-85  10:19a
    FUSE     EXE      4794  10-31-85  11:07a
    PALETTE  EXE      3750   6-10-85   4:29p
           10 file(s)      61767 bytes

    Total files listed:
           72 file(s)     316537 bytes
                            3072 bytes free

